 * Changed INSERT to REPLACE on login tickets- should fix bug with IP 
    changing on laptops.
 * Added $current_lang to available data in eprint script.
 * Moved exec'ing of SystemSetting binaries into Platform so that they
    can use custom code on non-UNIX platforms.

2007-01-09 tmb
 * Used TeX::Encode to provide some handling of accented characters in
    BibTeX import.

2007-01-10 tdb
 * Made ApacheLog optional on Date::Parse dependency
 * Made commonlog regexp in ApacheLog more flexible

2007-01-10 moj
 * Added user/remove action
 * Changed sure_delete to be a plugin phrase
 * Added User::Remove screen (similar to EPrint::Remove)
 * Added phrases for User::Remove

2007-01-11 moj
 * Public::RequestCopy stores actor as user's name (if logged in)
    or email address (if not).

2007-01-11 tmb
 * Added first cut of metadata fields, phrases and citations for new 
    eprint types.

2007-01-11 tmb
 * Added necessary bits to make activating minimal users simple.

2007-01-16 moj
 * Added exists_and_set checks to DC exporter.

2007-01-16 cjg
 * made fileinfo not export in XML.

2007-01-16 cjg
 * made fileinfo not export in XML actually work.

2007-01-16 cjg
 * Commented out autoloader in Tex::Encode to get rid of a warning.

2007-01-17 cjg
 * Fixed issue with &<> in autocomplete.
 * Fixed up confusing help in import
 * Added --force option to import

2007-01-17 cjg
 * fix rolllogs to EPrints::Index::rolllogs in indexer

2007-01-20 tdb
 * Fixed security holes in lookup scripts

2007-01-22 cjg
 * Removed SQL from lookup script.

2007-01-22 cjg
 * Fixed bug in Session which caused buttons to do odd things for
    a few seconds after initial login. (due to failing to clear an
    apache note).

2007-01-29 tdb
 * Initial version of an 'aqua' theme

2007-02-02 tdb
 * Make File::BOM use conditional on Perl version

2007-02-07 moj
 * Added WorkflowEdit - will be screen for editing workflows via web.

2007-02-12 cjg
 * Added an abort to the soap tool in case of no request.